log/build_2023-11-23_12-07-01/mypkg/stderr.log
  File "/home/atsushi8-ss/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 6
    if request.name == "山口敦志"
                            ^
SyntaxError: invalid syntax

